feat: add copy button functionality
- Add clipboardWrite permission to manifest.json
- Implement copy button UI in popup.html with styling
- Add copy functionality in popup.js with feedback states
- Adjust text margin for better button placement

--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,8 @@
   },
   "permissions": [
     "storage",
-    "contextMenus"
+    "contextMenus",
+    "clipboardWrite"
   ],
   "background": {
     "service_worker": "background.js"
